# app/Models/Game.php
@@ -13,7 +13,7 @@ class Game extends BaseModel
     use HasFactory;
 
     protected $table = 'games';
-    protected $fillable = ['id', 'name', 'category_id', 'genre_id', 'rating', 'summary', 'first_release_date'];
+    protected $fillable = ['id', 'name', 'category_id', 'rating', 'summary', 'first_release_date'];
     protected $hidden = ['created_at', 'updated_at'];
 
     public function category()
