# storage/api-docs/swagger.json
@@ -17,17 +17,82 @@
         }
     ],
     "paths": {
-        "/games/{id}": {
+        "/games": {
+            "get": {
+                "tags": [
+                    "Game"
+                ],
+                "summary": "Get games",
+                "description": "Display a listing of the game resource",
+                "operationId": "index",
+                "responses": {
+                    "200": {
+                        "description": "Games was fetched successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Game"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data"
+                    },
+                    "404": {
+                        "description": "Games not found"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Game"
+                ],
+                "summary": "Add a new game to Database",
+                "description": "Store a newly created game resource in storage via IGDB api or user data if game not exist in IGDB",
+                "operationId": "store",
+                "requestBody": {
+                    "description": "Create a new game in games searcher",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Game"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Games was fetched successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Game"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data"
+                    },
+                    "404": {
+                        "description": "Games not found"
+                    }
+                }
+            }
+        },
+        "/games/{gameId}": {
             "get": {
                 "tags": [
                     "Game"
                 ],
                 "summary": "Find game by ID",
-                "description": "Returns a single game",
-                "operationId": "getGameById",
+                "description": "Display the specified game resource",
+                "operationId": "show",
                 "parameters": [
                     {
-                        "name": "id",
+                        "name": "gameId",
                         "in": "path",
                         "description": "ID of game to return",
                         "required": true,
@@ -55,6 +120,82 @@
                         "description": "Game not found"
                     }
                 }
+            },
+            "put": {
+                "tags": [
+                    "Game"
+                ],
+                "summary": "Update an existing game",
+                "description": "Update the specified game resource in storage",
+                "operationId": "update",
+                "parameters": [
+                    {
+                        "name": "gameId",
+                        "in": "path",
+                        "description": "ID of game that needs to be updated",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "JSON data for update an existent game in database",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Game"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful update",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Game"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Game not found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Game"
+                ],
+                "summary": "Delete game",
+                "description": "Remove the specified game resource from storage",
+                "operationId": "destroy",
+                "parameters": [
+                    {
+                        "name": "gameId",
+                        "in": "path",
+                        "description": "ID of the game that needs to be deleted",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Invalid game id supplied"
+                    },
+                    "404": {
+                        "description": "Game not found"
+                    }
+                }
             }
         }
     },
@@ -64,20 +205,12 @@
                 "type": "object",
                 "properties": {
                     "id": {
-                        "type": "integer",
-                        "example": 4
+                        "type": "number",
+                        "example": "10"
                     },
                     "name": {
                         "type": "string",
                         "example": "Minecraft"
-                    },
-                    "category_id": {
-                        "type": "integer",
-                        "example": 1
-                    },
-                    "genre_id": {
-                        "type": "integer",
-                        "example": 2
                     },
                     "rating": {
                         "type": "number",
@@ -90,13 +223,16 @@
                     "first_release_date": {
                         "type": "string",
                         "example": "2022-01-12"
+                    },
+                    "category_id": {
+                        "type": "integer",
+                        "example": 1
                     }
                 },
                 "required": [
                     "id",
                     "name",
                     "category_id",
-                    "genre_id",
                     "rating",
                     "summary",
                     "first_release_date"
